--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-copilot": "^3.3.3",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-onboarding-swiper": "^1.3.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
