--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.rsmane.gachanote"
+      "package": "com.akhidevofficial.gachanote"
     },
     "web": {
       "bundler": "metro",
