--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
+    "expo-file-system": "^19.0.15",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.6",
+    "expo-sharing": "^14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
