--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-native-webview": "13.15.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "expo-document-picker": "~14.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
