--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-picker/picker": "^2.11.1",
@@ -20,27 +20,28 @@
     "@react-navigation/native": "^7.1.6",
     "@reduxjs/toolkit": "^2.8.2",
     "date-fns": "^4.1.0",
-    "expo": "54.0.12",
+    "expo": "^54.0.20",
     "expo-blur": "~15.0.7",
-    "expo-constants": "~18.0.9",
+    "expo-constants": "~18.0.10",
     "expo-crypto": "~15.0.7",
     "expo-document-picker": "~14.0.7",
-    "expo-file-system": "^19.0.15",
-    "expo-font": "~14.0.8",
+    "expo-file-system": "~19.0.17",
+    "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.9",
+    "expo-image": "~3.0.10",
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.10",
+    "expo-mail-composer": "^15.0.7",
+    "expo-router": "~6.0.13",
     "expo-sharing": "^14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
+    "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-native": "^0.81.4",
+    "react-native": "^0.81.5",
     "react-native-chart-kit": "^6.12.0",
     "react-native-copilot": "^3.3.3",
     "react-native-gesture-handler": "~2.28.0",
