--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -20,7 +20,7 @@
     "@react-navigation/native": "^7.1.6",
     "@reduxjs/toolkit": "^2.8.2",
     "date-fns": "^4.1.0",
-    "expo": "^54.0.20",
+    "expo": "54.0.23",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.10",
     "expo-crypto": "~15.0.7",
@@ -34,13 +34,13 @@
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.8",
     "expo-mail-composer": "^15.0.7",
-    "expo-router": "~6.0.13",
+    "expo-router": "6.0.14",
     "expo-sharing": "^14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
-    "expo-web-browser": "~15.0.8",
+    "expo-web-browser": "15.0.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-native": "^0.81.5",
